Ajusta contagem de usuários nas salas

--- a/public/index.html
+++ b/public/index.html
@@ -335,83 +335,80 @@
 })();
 </script>
 
-
-
-
-    <h2 id="tituloSala">Escolha uma sala</h2>
-    <div class="room-list" id="roomList">
-      <div class="room" onclick="entrarSala('Inglês')">
-        <img src="https://flagcdn.com/us.svg" alt="Inglês" />
-        <div id="labelIngles">Inglês (EUA)</div>
-        <div class="count" id="count-Inglês">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Mandarim')">
-        <img src="https://flagcdn.com/cn.svg" alt="Mandarim" />
-        <div id="labelMandarim">Mandarim (China)</div>
-        <div class="count" id="count-Mandarim">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Espanhol')">
-        <img src="https://flagcdn.com/es.svg" alt="Espanhol" />
-        <div id="labelEspanhol">Espanhol (Espanha)</div>
-        <div class="count" id="count-Espanhol">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Hindi')">
-        <img src="https://flagcdn.com/in.svg" alt="Hindi" />
-        <div id="labelHindi">Hindi (Índia)</div>
-        <div class="count" id="count-Hindi">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Árabe')">
-        <img src="https://flagcdn.com/sa.svg" alt="Árabe" />
-        <div id="labelArabe">Árabe (Arábia Saudita)</div>
-        <div class="count" id="count-Árabe">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Francês')">
-        <img src="https://flagcdn.com/fr.svg" alt="Francês" />
-        <div id="labelFrances">Francês (França)</div>
-        <div class="count" id="count-Francês">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Russo')">
-        <img src="https://flagcdn.com/ru.svg" alt="Russo" />
-        <div id="labelRusso">Russo (Rússia)</div>
-        <div class="count" id="count-Russo">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Português')">
-        <img src="https://flagcdn.com/br.svg" alt="Português" />
-        <div id="labelPortugues">Português (Brasil)</div>
-        <div class="count" id="count-Português">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Bengali')">
-        <img src="https://flagcdn.com/bd.svg" alt="Bengali" />
-        <div id="labelBengali">Bengali (Bangladesh)</div>
-        <div class="count" id="count-Bengali">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Japonês')">
-        <img src="https://flagcdn.com/jp.svg" alt="Japonês" />
-        <div id="labelJapones">Japonês (Japão)</div>
-        <div class="count" id="count-Japonês">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Lahnda')">
-        <img src="https://flagcdn.com/pk.svg" alt="Lahnda" />
-        <div id="labelLahnda">Lahnda (Paquistão)</div>
-        <div class="count" id="count-Lahnda">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Javanês')">
-        <img src="https://flagcdn.com/id.svg" alt="Javanês" />
-        <div id="labelJavanes">Javanês (Indonésia)</div>
-        <div class="count" id="count-Javanês">0</div>
-      </div>
-	    <div class="room" onclick="entrarSala('Italiano')">
-        <img src="https://flagcdn.com/it.svg" alt="Javanês" />
-        <div id="labelItaliano">Italiano (Itália)</div>
-        <div class="count" id="count-Javanês">0</div>
-      </div>
-      <div class="room" onclick="entrarSala('Turco')">
-        <img src="https://flagcdn.com/tr.svg" alt="Turco" />
-        <div id="labelTurco">Turco (Turquia)</div>
-        <div class="count" id="count-Turco">0</div>
-      </div>
-    </div>
+   <h2 id="tituloSala">Escolha uma sala</h2>
+<div class="room-list" id="roomList">
+  <div class="room" onclick="entrarSala('ingles')">
+    <img src="https://flagcdn.com/us.svg" alt="Inglês" />
+    <div id="labelIngles">Inglês (EUA)</div>
+    <div class="count" id="count-ingles">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('mandarim')">
+    <img src="https://flagcdn.com/cn.svg" alt="Mandarim" />
+    <div id="labelMandarim">Mandarim (China)</div>
+    <div class="count" id="count-mandarim">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('espanhol')">
+    <img src="https://flagcdn.com/es.svg" alt="Espanhol" />
+    <div id="labelEspanhol">Espanhol (Espanha)</div>
+    <div class="count" id="count-espanhol">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('hindi')">
+    <img src="https://flagcdn.com/in.svg" alt="Hindi" />
+    <div id="labelHindi">Hindi (Índia)</div>
+    <div class="count" id="count-hindi">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('arabe')">
+    <img src="https://flagcdn.com/sa.svg" alt="Árabe" />
+    <div id="labelArabe">Árabe (Arábia Saudita)</div>
+    <div class="count" id="count-arabe">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('frances')">
+    <img src="https://flagcdn.com/fr.svg" alt="Francês" />
+    <div id="labelFrances">Francês (França)</div>
+    <div class="count" id="count-frances">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('russo')">
+    <img src="https://flagcdn.com/ru.svg" alt="Russo" />
+    <div id="labelRusso">Russo (Rússia)</div>
+    <div class="count" id="count-russo">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('portugues')">
+    <img src="https://flagcdn.com/br.svg" alt="Português" />
+    <div id="labelPortugues">Português (Brasil)</div>
+    <div class="count" id="count-portugues">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('bengali')">
+    <img src="https://flagcdn.com/bd.svg" alt="Bengali" />
+    <div id="labelBengali">Bengali (Bangladesh)</div>
+    <div class="count" id="count-bengali">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('japones')">
+    <img src="https://flagcdn.com/jp.svg" alt="Japonês" />
+    <div id="labelJapones">Japonês (Japão)</div>
+    <div class="count" id="count-japones">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('lahnda')">
+    <img src="https://flagcdn.com/pk.svg" alt="Lahnda" />
+    <div id="labelLahnda">Lahnda (Paquistão)</div>
+    <div class="count" id="count-lahnda">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('javanes')">
+    <img src="https://flagcdn.com/id.svg" alt="Javanês" />
+    <div id="labelJavanes">Javanês (Indonésia)</div>
+    <div class="count" id="count-javanes">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('italiano')">
+    <img src="https://flagcdn.com/it.svg" alt="Italiano" />
+    <div id="labelItaliano">Italiano (Itália)</div>
+    <div class="count" id="count-italiano">0</div>
+  </div>
+  <div class="room" onclick="entrarSala('turco')">
+    <img src="https://flagcdn.com/tr.svg" alt="Turco" />
+    <div id="labelTurco">Turco (Turquia)</div>
+    <div class="count" id="count-turco">0</div>
+  </div>
 </div>
+
 
 <!-- Idioma fixo discreto após aceitar -->
 <div id="languageSelectFixed">
