--- a/public/index.html
+++ b/public/index.html
@@ -330,7 +330,7 @@
 
     <footer>
         <p>&copy; 2025 Verboso. Todos os direitos reservados.</p>
-        <p>Desenvolvido por <a href="#">[Seu Nome ou Nickname]</a></p>
+        <p>Desenvolvido por <a href="mailto:paulo.stracci@gmail.com">Paulo Stracci</a></p>
     </footer>
 
     <script src="/socket.io/socket.io.js"></script>
