--- a/public/chat.html
+++ b/public/chat.html
@@ -2,8 +2,19 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Chat Verbi</title>
 <style>
+  :root {
+    --primary-color: #007aff;
+    --gray-border: #dee2e6;
+  }
+  html {
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    box-sizing: inherit;
+  }
   body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     margin: 0;
@@ -12,22 +23,24 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;
   }
   .top-bar {
     display: flex;
     align-items: center;
     padding: 0 16px;
     background-color: #fff;
-    border-bottom: 1px solid #dee2e6;
+    border-bottom: 1px solid var(--gray-border);
     box-shadow: 0 1px 3px rgba(0,0,0,0.05);
+    flex-shrink: 0;
   }
   #backBtn {
     background: none;
     border: none;
-    font-size: 1.5em;
-    color: #007aff;
+    font-size: 1.8em;
+    color: var(--primary-color);
     cursor: pointer;
-    padding: 12px 10px 12px 0;
+    padding: 10px 10px 10px 0;
   }
   #backBtn:hover { opacity: 0.7; }
   #roomTitle {
@@ -36,23 +49,28 @@
     margin: 0;
     font-size: 1.2em;
     font-weight: 600;
-    color: #495057;
   }
+  #usersBtn {
+    background: none;
+    border: none;
+    font-size: 1.8em;
+    color: var(--primary-color);
+    cursor: pointer;
+    padding: 10px 0 10px 10px;
+    display: none; /* Escondido em telas grandes */
+  }
+
   .chat-container {
     display: flex;
     flex: 1;
-    padding: 15px;
-    gap: 15px;
     overflow: hidden;
   }
   .messages-area {
-    flex: 3;
+    flex: 1;
     display: flex;
     flex-direction: column;
     min-width: 0;
     background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
   }
   .messages {
     flex: 1;
@@ -64,14 +82,15 @@
     background-color: #f8f9fa;
   }
   .users {
-    flex: 1;
-    max-width: 300px;
+    flex-basis: 300px;
+    flex-shrink: 0;
     background-color: #fff;
-    border-radius: 8px;
     padding: 15px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    border-left: 1px solid var(--gray-border);
     overflow-y: auto;
+    transition: transform 0.3s ease-in-out;
   }
+  
   #statusContainer {
     display: flex;
     align-items: center;
@@ -101,6 +120,7 @@
   .status-online-dot { background-color: #28a745; }
   .status-voltoja-dot { background-color: #ffc107; }
   .status-ocupado-dot { background-color: #dc3545; }
+  .user-item { cursor: pointer; }
 
   #chatInputWrapper {
     display: flex;
@@ -109,39 +129,39 @@
     gap: 8px;
     position: relative;
     flex-direction: column;
+    background-color: #fff;
   }
-
   .input-controls {
       display: flex;
       gap: 8px;
       width: 100%;
   }
-
   #msgInput {
     flex: 1;
     padding: 10px 15px;
     border-radius: 20px;
     border: 1px solid #ccc;
-    font-size: 14px;
+    font-size: 16px; /* Tamanho melhor para mobile */
     background-color: #f5f5f7;
     outline: none;
   }
-  #msgInput:focus { border-color: #007aff; }
-
-  #imageBtn {
+  #msgInput:focus { border-color: var(--primary-color); }
+  
+  .control-btn {
     background-color: transparent;
     color: #6c757d;
     border: none;
     border-radius: 50%;
-    width: 40px;
-    height: 40px;
+    width: 44px;
+    height: 44px;
     cursor: pointer;
     font-size: 22px;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
   }
-  #imageBtn:hover { background-color: #f0f0f0; }
+  .control-btn:hover { background-color: #f0f0f0; }
 
   #imagePreviewContainer {
       display: none;
@@ -149,119 +169,71 @@
       position: relative;
       max-width: 150px;
   }
-  #imagePreview {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-  }
+  #imagePreview { max-width: 100%; border-radius: 8px; border: 1px solid #ccc; }
   #removeImageBtn {
-      position: absolute;
-      top: -5px;
-      right: 0;
-      background: #333;
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 20px;
-      height: 20px;
-      cursor: pointer;
-      font-weight: bold;
-      line-height: 18px;
-      text-align: center;
+      position: absolute; top: -5px; right: 0; background: #333; color: white;
+      border: none; border-radius: 50%; width: 20px; height: 20px;
+      cursor: pointer; font-weight: bold; line-height: 18px; text-align: center;
   }
   
-  .chat-image {
-      max-width: 300px;
-      max-height: 250px;
-      border-radius: 8px;
-      margin-top: 5px;
-      display: block;
-      cursor: pointer;
-  }
+  .chat-image { max-width: 250px; max-height: 200px; border-radius: 8px; margin-top: 5px; display: block; cursor: pointer; }
 
   #sendBtn {
-    background-color: #007aff;
-    color: white;
-    border: none;
-    border-radius: 20px;
-    padding: 0 20px;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 600;
-    transition: background-color 0.2s;
+    background-color: var(--primary-color);
+    color: white; border: none; border-radius: 22px; padding: 0 20px; cursor: pointer;
+    font-size: 16px; font-weight: 600; transition: background-color 0.2s;
   }
   #sendBtn:hover { background-color: #005bb5; }
   
-  #emojiBtn {
-    background-color: transparent;
-    color: #6c757d;
-    border: none;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
   #emojiPicker {
-    position: absolute;
-    bottom: 60px;
-    left: 10px;
-    background: white;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    padding: 5px;
-    display: none;
-    flex-wrap: wrap;
-    width: 240px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    z-index: 100;
+    position: absolute; bottom: 100%; left: 10px; margin-bottom: 5px; background: white;
+    border: 1px solid #ccc; border-radius: 10px; padding: 5px;
+    display: none; flex-wrap: wrap; width: 280px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); z-index: 100;
   }
-  #emojiPicker span {
-    cursor: pointer;
-    padding: 5px;
-    font-size: 22px;
-  }
+  #emojiPicker span { cursor: pointer; padding: 5px; font-size: 24px; }
   #emojiPicker span:hover { background: #f0f0f0; border-radius: 6px; }
   
-  .mention-highlight {
-    background-color: #fffbe6;
-    border-left: 4px solid #007aff;
-    padding-left: 8px;
-    border-radius: 4px;
-  }
+  .mention-highlight { background-color: #fffbe6; border-left: 4px solid var(--primary-color); padding-left: 8px; border-radius: 4px; }
   
   #mentionSuggestions {
-    display: none;
-    position: absolute;
-    bottom: 100%;
-    left: 0;
-    right: 0;
-    background: white;
-    border: 1px solid #ccc;
-    border-bottom: none;
-    border-radius: 8px 8px 0 0;
-    box-shadow: 0 -4px 10px rgba(0,0,0,0.1);
-    z-index: 1000;
-    max-height: 180px;
-    overflow-y: auto;
+    display: none; position: absolute; bottom: 100%; left: 0; right: 0;
+    background: white; border: 1px solid #ccc; border-bottom: none;
+    border-radius: 8px 8px 0 0; box-shadow: 0 -4px 10px rgba(0,0,0,0.1);
+    z-index: 1000; max-height: 180px; overflow-y: auto;
   }
+  #mentionSuggestions div { padding: 10px 15px; cursor: pointer; border-bottom: 1px solid #f0f0f0; }
+  #mentionSuggestions div:hover { background-color: #f0f8ff; }
 
-  #mentionSuggestions div {
-    padding: 10px 15px;
-    cursor: pointer;
-    border-bottom: 1px solid #f0f0f0;
-  }
-
-  #mentionSuggestions div:last-child {
-    border-bottom: none;
-  }
-
-  #mentionSuggestions div:hover {
-    background-color: #f0f8ff;
+  /* =============================================== */
+  /* === ESTILOS PARA TELAS PEQUENAS (MOBILES) === */
+  /* =============================================== */
+  @media (max-width: 768px) {
+    #usersBtn {
+        display: block; /* Mostra o botão de usuários */
+    }
+    .chat-container {
+        position: relative;
+    }
+    .users {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 80%;
+        max-width: 320px;
+        transform: translateX(100%); /* Começa escondido fora da tela */
+        z-index: 2000;
+        box-shadow: -5px 0 15px rgba(0,0,0,0.2);
+    }
+    .users.show {
+        transform: translateX(0); /* Mostra o painel */
+    }
+    .messages-area {
+        flex: 1; /* Ocupa toda a largura */
+    }
+    .chat-image {
+        max-width: 200px; /* Imagens um pouco menores no mobile */
+    }
   }
 
 </style>
@@ -271,6 +243,7 @@
 <div class="top-bar">
     <button id="backBtn">←</button>
     <h2 id="roomTitle"></h2>
+    <button id="usersBtn">👥</button>
 </div>
 
 <div class="chat-container">
@@ -282,10 +255,10 @@
             <button id="removeImageBtn">&times;</button>
         </div>
         <div class="input-controls">
-            <button id="emojiBtn">😊</button>
-            <button id="imageBtn">🖼️</button>
+            <button id="emojiBtn" class="control-btn">😊</button>
+            <button id="imageBtn" class="control-btn">🖼️</button>
             <input type="file" id="imageInput" accept="image/*" style="display: none;">
-            <input id="msgInput" placeholder="Digite sua mensagem ou cole uma imagem..." autocomplete="off" />
+            <input id="msgInput" placeholder="Digite sua mensagem..." autocomplete="off" />
             <div id="mentionSuggestions"></div>
             <button id="sendBtn">Enviar</button>
         </div>
